# remote_manger

./: README.md  config.yaml  go.mod  main.go  main.py  pyproject.toml  remote-manager
