[project]
name = "rdp-ssh-manger-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "install",
    "nuitka==1.8.6",
    "psutil>=7.2.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


